# esp32_X3DH

./: .gitignore  LICENSE  README.md  docker-compose.yml  down_service.sh  start_service.sh  stop_service.sh
client/: sdkconfig.defaults
client/components/libxeddsa/: CMakeLists.txt
client/main/: Kconfig.projbuild  common.c  http_client.h  idf_component.yml
server/: Dockerfile  requirements.txt  server.py
x3dh_client/: CMakeLists.txt  sdkconfig.defaults
x3dh_client/components/libxeddsa/ref10/: CMakeLists.txt
x3dh_client/components/libxeddsa/ref10/include/: cross_platform.h
x3dh_client/main/: CMakeLists.txt  alice.c  app_main.c  bob.c  common.h  http_client.c  http_client.h  idf_component.yml
